--- a/index.html
+++ b/index.html
@@ -1296,7 +1296,7 @@
                           aquí.
                           ¡Interesada en compartir moda, eventos, lugares, espacios con encanto y mucha felicidad! <br>
                           Tres, dos, uno… ¿empezamos? <br>
-                          ¡Que tu falda vuele muy alto! <br><br> </font>
+                           <br> </font>
                       </a>
                         <!--<a href="#bags-lottery"><font style="text-transform: none;">rosana@elvuelodemifalda.com</font>
                         </a>-->
