--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   
-  <title>Inicio - El vuelo de mi falda</title>
+  <title>MI SONRISA PERFECTA: ¡DEL SUEÑO A LA REALIDAD!</title>
   
   
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
